# godseye

./: .gitignore  README.md
agent/: .gitignore  MANIFEST.in  README.md  debug_agent_full.py  install.sh  pyproject.toml  test_direct.py
agent/src/godseye_agent/: __init__.py  cli.py  config.py  credentials.py  transport.py
agent/src/godseye_agent/collectors/: __init__.py  disks.py  heartbeat.py  identity.py  logs.py  network.py  packages.py  processes.py
agent/systemd/: godseye-agent.service  godseye-agent.timer
docs/: development_plan.md
scripts/: deploy-functions.sh  setup-org.sql
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/functions/: README.md
supabase/functions/_shared/: auth.ts  db.ts  response.ts  schema.ts
supabase/functions/enroll/: index.ts
supabase/functions/health/: index.ts
supabase/functions/ingest/: index.ts
supabase/functions/nonce-cleanup/: index.ts
supabase/functions/offline-detector/: index.ts
supabase/functions/rollup-builder/: index.ts
supabase/functions/rotate/: index.ts
web/: CLOUDFLARE_DEPLOY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
web/public/: _redirects
web/src/: App.tsx  config.ts
web/src/lib/: supabase.ts
web/src/pages/: Dashboard.tsx  Login.tsx  ServerDetail.tsx
